# ElevenDesk

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
elevendesk/: __main__.py  api.py  app.py  config.py  constants.py  playback.py
elevendesk/ui/: choices.py  main_frame.py
elevendesk/ui/dialogs/: audio_devices_dialog.py  clone_voice_dialog.py  history_dialog.py  pronunciation_dialog.py  settings_dialog.py  voice_library_dialog.py
elevendesk/ui/panels/: sfx_panel.py  sts_panel.py  stt_panel.py  tts_panel.py  voice_design_panel.py
