[project]
name = "elevendesk"
version = "1.0.0"
description = "An accessible wxPython desktop client for the ElevenLabs API."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
	"elevenlabs",
	"smart-list",
	"sound-lib>=0.83",
	"wxpython",
]

[tool.ruff]
target-version = "py313"

[tool.uv.sources]
smart-list = { git = "https://github.com/accessibleapps/smart_list" }

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
